<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.multimeleon.welcome.peter_john.nfcapp.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorButtonNormal">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorAccent"
            android:fadingEdge="horizontal|vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/select_operation_to_perform"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="4dp">

                    <Button
                        android:id="@+id/writeToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/write" />

                    <Button
                        android:id="@+id/readToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal"
                        android:text="@string/read" />

                    <Button
                        android:id="@+id/resetButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal"
                        android:text="@string/reset" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/output_current"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/darker_gray"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">


                    <SeekBar
                        android:id="@+id/outputCurrentSlider"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal" />

                    <Spinner
                        android:id="@+id/outputCurrentSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:textAlignment="viewEnd" />


                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/minimum_dim_current"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <LinearLayout
                    android:id="@+id/layout_minDimCurrent"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <SeekBar
                            android:id="@+id/minDimCurrentSlider"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/colorButtonNormal" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/minDimCurrentPctSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                            <Spinner
                                android:id="@+id/minDimCurrentSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/advancedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingTop="16dp"
                    android:text="@string/advanced"
                    android:onClick="advancedClick"
                    app:layout_constraintTop_toBottomOf="@+id/layout_minDimCurrent" />

                <TextView
                    android:id="@+id/dimmingCurveLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/dimming_curve"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/dimmingCurveLayout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:background="?attr/colorButtonNormal"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/dimCurveLinearBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:checked="false"
                        android:text="@string/linear" />

                    <RadioButton
                        android:id="@+id/dimCurveSftStrtBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/soft_start" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/darker_gray"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/dimCurveLogBtn"
                            android:layout_width="473dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/colorButtonNormal"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/logarithmic" />

                        <Spinner
                            android:id="@+id/dimCurveSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/fbcvLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/full_bright_control_voltage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:id="@+id/fbcvLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/darker_gray"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:visibility="invisible">

                    <SeekBar
                        android:id="@+id/fullBrightVoltageSlider"
                        android:layout_width="473dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal" />

                    <Spinner
                        android:id="@+id/fullBrightVoltageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/mdcvLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/min_dim_control_voltage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/mdcvLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/darker_gray"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:visibility="invisible">

                    <SeekBar
                        android:id="@+id/minDimVoltageSlider"
                        android:layout_width="469dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal" />

                    <Spinner
                        android:id="@+id/minDimVoltageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/dtocvLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/dim_to_off_control_voltage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:id="@+id/dtocvLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/darker_gray"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:visibility="invisible">

                    <SeekBar
                        android:id="@+id/dimToOffVoltageSlider"
                        android:layout_width="469dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/colorButtonNormal" />

                    <Spinner
                        android:id="@+id/dimToOffVoltageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
