<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.multimeleon.welcome.peter_john.nfcapp.SearchActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorButtonNormal">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorAccent"
            android:fadingEdge="horizontal|vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/divLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/DIVLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/DriverInputVoltageLabel"
            android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/divSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle"
            android:pointerIcon="arrow"
            android:requiresFadingEdge="none"
            android:theme="@android:style/ThemeOverlay.Material.Light"
            app:layout_constraintTop_toBottomOf="@+id/DIVLabel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rdocLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divLayout">

        <TextView
            android:id="@+id/RDOCLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/RatedDriverOutputCurrentLabel"
            android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/rdocEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle"
            android:hint="** Required **"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/RDOCLabel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rdopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdocLayout">

        <TextView
            android:id="@+id/RDOPLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/RatedDriverOutputPowerLabel"
            android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/rdopEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/RDOPLabel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dcLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdopLayout">

        <TextView
            android:id="@+id/DCLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/DimmingControlLabel"
            android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/dcSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle"
            android:pointerIcon="arrow"
            android:requiresFadingEdge="none"
            android:theme="@android:style/ThemeOverlay.Material.Light"
            app:layout_constraintTop_toBottomOf="@+id/DIVLabel" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/search"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:onClick="searchClick"
        app:layout_constraintTop_toBottomOf="@+id/dcLayout" />
        </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>